@@ -14,6 +14,8 @@ Bug Fixes
 
 * SOLR-17263: Fix 'Illegal character in query' exception in HttpJdkSolrClient (Andy Webb)
 
+* SOLR-17275: SolrJ ZkClientClusterStateProvider, revert SOLR-17153 for perf regression when aliases are used. (Aparna Suresh)
+
 Dependency Upgrades
 ---------------------
 (No changes)
